Handle pipe closure in ThrottlingURLLoader

This change adds a connection error handler to the URLLoaderClient pipe
bound to the ThrottlingURLLoader. If this pipe unexpectedly closes
before the OnComplete message is received then the request is cancelled
with net::ERR_FAILED. This mirrors the behavior of ResourceDispatcher
when the ResourceHostMsg_SyncLoad IPC fails without returning an error
code.

This condition happens when a request is cancelled by the browser
process and the SyncResourceHandler or MojoAsyncResourceHandler is
unexpectedly destroyed.

Bug: 756751
Change-Id: I0ac8498ad38f27b50b64e1a13e6af2c6883b2f35